--- a/HomePage/src/app/navbar/navbar.component.html
+++ b/HomePage/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary">
-    <span><span><img src="../assets/images/icons8.png"/></span></span>
+    <span><span><img src="../assets/images/icons8.png"/> SmartTrainer</span></span>
     <div class="spacer"></div>
-    <a mat-button>home</a>
-    <a mat-button>home</a>
-    <a mat-button>home</a>
-    <a mat-button>home</a>
+    <a mat-button href="#header">Home</a>
+    <a mat-button href="#services">Services</a>
+    <a mat-button href="#contact"> About Us</a>
+    <a mat-button href="#community">Subscribe</a>
 </mat-toolbar>
