--- a/HomePage/src/app/app.component.html
+++ b/HomePage/src/app/app.component.html
@@ -1,24 +1,7 @@
 
-<style>
-  #header{
-    width: 100%;
-    height: 100vh;
-  }
-  
-  
- 
-
-  @media screen and (max-width: 575px) {
-    svg#rocket-smoke {
-      display: none;
-      visibility: hidden;
-    }
-  }
-</style>
-
 <app-navbar></app-navbar>
 
-<section id="header" class="container-fluid">
+<section id="header" class="container-fluid" style="background-color: rgb(246, 253, 253);">
   <div class="container py-5">
     <div class="row py-4">
       <div class="col-lg-6 col-xl-5">
@@ -36,3 +19,166 @@
     </div>
   </div>
 </section>
+
+<section class="bottom-part" id="services">
+  <div class="container py-5">
+    <div class="row">
+      <div class="col-lg-12">
+        <h2>Explore our services</h2>
+      </div>
+    </div>
+    <div class="row pt-5">
+    <div class="col-lg-12 m-auto">
+      <div class="row text-center">
+        <div class="col-lg-4">
+          <img src="../assets/images/meal.png" class="img-fluid"/>
+          <h3>Personal Meal plans</h3>
+          <p>We offer detailed meal plans to guide you on the type of food you should eat before and after every workout session.  </p>
+          <a class="read-more no-line" href="#">Learn more <span><i class="bi bi-arrow-right"></i></span></a>
+        </div>
+        <div class="col-lg-4">
+          <img src="../assets/images/trainers.png" class="img-fluid" />
+          <h3>Daily Exercise schedule</h3>
+          <p>We offer a detailed weekely workout schedule which will help in terms of having a more structured daily workout
+            routine
+          </p>
+          <a class="read-more no-line" href="#">Learn more <span><i class="bi bi-arrow-right"></i></span></a>
+        </div>
+        <div class="col-lg-4">
+          <img src="../assets/images/timetable.png" class="img-fluid" />
+          <h3>Learn from our trainers</h3>
+          <p>Our team of highly educated trainers provide one on one sessions were they
+            teach abiut the names of every muscles in our bodies and how to train them to get maximum results </p>
+            <a class="read-more no-line" href="#">Learn more <span><i class="bi bi-arrow-right"></i></span></a>
+        </div>
+       
+      </div>
+    </div>
+    </div>
+  </div>
+
+</section>
+<section id="details" class="container-fluid">
+  <div class="container-sm text-center py-5 " width="20%">
+    <div class="row center-block pt-5 ">
+      <div class="col-sm-10 col-sm-offset-1">
+        <div class="row justify-content-md-center">
+          <div class="col-md-7">
+            
+              <img class="img-fluid" src="../assets/images/support.jpg" alt="alternative" width="60%" height="60%" />
+          </div>
+          <div class="col-sm-4 justify-content-md-center">
+            <div class="text-container">
+              <h1>Why Choose Us?</h1>
+              <p>We understannd the frustration that comes with walking into the gym for the first time,seeing all the wonderful equipment
+                  but not knowing were to start. Our support group will keep you 
+                  motivated whenever you are feeling demotivated.
+              </p>
+              <a class="btn-solid-reg" href="#contact">Contact us</a>
+            </div>
+          </div>
+        </div>
+        </div>
+    
+    </div>
+  </div>
+  
+</section>
+<section id="details" class="container-fluid">
+  <div class="container-sm py-5 " width="20%">
+    <div class="row pt-5 ">
+      <div class="col-sm-10 col-sm-offset-1">
+        <div class="row justify-content-md-center">
+          <div class="col-md-7">
+            <div class="text-container">
+            <h1>It is important to do exercises correctly!</h1>
+              <p>Learn from our workout videos how to perfom different exercises
+                to help you target all the different muscles properly. 
+                You do not have to go searching for workout videos we bring them to you.</p>
+              <a class="btn-solid-reg" href="#community">Get notifications</a>
+            </div>
+          </div>
+          <div class="col-sm-4 justify-content-md-center">
+            <img class="img-fluid" src="../assets/images/click.png" alt="alternative" width="60%" height="60%" />
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  </section>
+
+
+<section class="container-fluid py-5" id="contact">
+  <div class="container py-4">
+    <div class="row">
+      <div class="col-lg-5 m-auto text-center">
+        <h1>Contact Us</h1>
+        <h6 style="color: rgb(255, 0, 55);">For more information</h6>
+      </div>
+    </div>
+    <div class="row py-5">
+      <div class="col-lg-9 m-auto">
+        <div class="row">
+          <div class="col-lg-4">
+              <h6>LOCATION</h6>
+              <P>Pietermaritzburg SA</P>
+            
+            
+              <h6>PHONE</h6>
+              <P>(033) 625 8637</P>
+            
+              <h6>EMAIL</h6>
+              <P>smarttrainer@yahoo.com</P>
+          </div>
+          <div class="col-lg-7">
+            <div class="row">
+              <div class="col-lg-6">
+                <input type="text" class="form-control bg-light" placeholder="First Name">
+              </div>
+              <div class="col-lg-6">
+                <input type="text" class="form-control bg-light" placeholder="Last Name">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-12 py-3">
+                <textarea name="" class="form-control bg-light" id="" cols="10" rows="5" placeholder="Enter message"></textarea>
+              </div>
+            </div>
+            <button class="btn btn-danger btn-sm rounded-3">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<div class="container-fluid py-5 " id="community">
+  <div class="row py-5" id="row-container">
+    <div class="container text-center">
+      <div class="col-md-6 mx-auto">
+      <h3 class="mt-4">Dont miss our updates,Join our community </h3>
+      <div class="input-group mt-5" id="mailing">
+        <input type="email" class="form-control" placeholder="Enter your email">
+        <button class="btn " type="button">Submit</button>
+      </div>
+    </div> 
+    </div>
+  </div>
+</div>
+
+<footer class="pt-4 bg-dark text-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6">
+        <h5>Follow Us</h5>
+        <ul class="list-inline mb-0">
+          <li class="list-inline-item"><a href="#"><fa-icon style="font-size: 40px;" [icon]="faYoutube"></fa-icon></a></li>
+          <li class="list-inline-item"><a href="#"><fa-icon style="font-size: 40px;" [icon]="faFacebook"></fa-icon></a></li>
+          <li class="list-inline-item"><a href="#"><fa-icon style="font-size: 40px;" [icon]="faInstagramSquare"></fa-icon></a></li>
+          <li class="list-inline-item"><a href="#"><fa-icon style="font-size: 40px;" [icon]="faLinkedin"></fa-icon></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
