--- a/HomePage/src/app/app.component.html
+++ b/HomePage/src/app/app.component.html
@@ -51,13 +51,12 @@
             teach abiut the names of every muscles in our bodies and how to train them to get maximum results </p>
             <a class="read-more no-line" href="#">Learn more <span><i class="bi bi-arrow-right"></i></span></a>
         </div>
-       
       </div>
     </div>
     </div>
   </div>
-
 </section>
+
 <section id="details" class="container-fluid">
   <div class="container-sm text-center py-5 " width="20%">
     <div class="row center-block pt-5 ">
@@ -109,7 +108,7 @@
   </section>
 
 
-<section class="container-fluid py-5" id="contact">
+<section class="container-fluid " id="contact">
   <div class="container py-4">
     <div class="row">
       <div class="col-lg-5 m-auto text-center">
@@ -117,17 +116,14 @@
         <h6 style="color: rgb(255, 0, 55);">For more information</h6>
       </div>
     </div>
-    <div class="row py-5">
+    <div class="row ">
       <div class="col-lg-9 m-auto">
         <div class="row">
           <div class="col-lg-4">
               <h6>LOCATION</h6>
               <P>Pietermaritzburg SA</P>
-            
-            
               <h6>PHONE</h6>
               <P>(033) 625 8637</P>
-            
               <h6>EMAIL</h6>
               <P>smarttrainer@yahoo.com</P>
           </div>
