--- a/HomePage/src/app/app.component.html
+++ b/HomePage/src/app/app.component.html
@@ -1,5 +1,36 @@
 
-<app-navbar></app-navbar>
+ <section class="logo-container">
+    <nav
+      class="navbar navbar-expand-md fixed-top navbar-light bg-white" aria-label="Main navigation">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <span><span><img src="../assets/images/icons8.png" /> SmartTrainer</span></span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#header">Home</a>
+      
+            <li class="nav-item">
+              <a class="nav-link" href="#services">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#info">information</a>
+            </li>
+          </ul>
+          <a href="#community" class="btn btn-brand ms-lg-3">Subscribe</a>
+        </div>
+      </div>
+    </nav>
+ </section>
+
 
 <section id="header" class="container-fluid" style="background-color: rgb(246, 253, 253);">
   <div class="container py-5">
@@ -7,7 +38,8 @@
       <div class="col-lg-6 col-xl-5">
         <div class="col-lg-7 pt-5 ">
           <h1 class="h1-large pt-5 fw-bold">Learn how to train your body</h1>
-          <p class="p-large ">Get all the tips you need on how to train different muscles of your body as a beginner at the gym.</p>
+          <p class="p-large ">As a beginner at the gym, get all the information you need on how 
+            to train different muscles in your body.</p>
           <a class="btn btn-info btn-sm" href="#services">Learn more</a>
         </div>
       </div>
@@ -20,92 +52,92 @@
   </div>
 </section>
 
-<section class="bottom-part" id="services">
-  <div class="container py-5">
-    <div class="row">
-      <div class="col-lg-12">
-        <h2>Explore our services</h2>
+
+
+  <section id="services">
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-md-8 mx-auto text-center">
+          
+          <h1>Explore Our Services</h1>
+        </div>
       </div>
-    </div>
-    <div class="row pt-5">
-    <div class="col-lg-12 m-auto">
-      <div class="row text-center">
-        <div class="col-lg-4">
-          <img src="../assets/images/meal.png" class="img-fluid"/>
-          <h3>Personal Meal plans</h3>
-          <p>We offer detailed meal plans to guide you on the type of food you should eat before and after every workout session.  </p>
-          <a class="read-more no-line" href="#">Learn more <span><i class="bi bi-arrow-right"></i></span></a>
-        </div>
-        <div class="col-lg-4">
-          <img src="../assets/images/trainers.png" class="img-fluid" />
-          <h3>Daily Exercise schedule</h3>
-          <p>We offer a detailed weekely workout schedule which will help in terms of having a more structured daily workout
-            routine
-          </p>
-          <a class="read-more no-line" href="#">Learn more <span><i class="bi bi-arrow-right"></i></span></a>
-        </div>
-        <div class="col-lg-4">
-          <img src="../assets/images/timetable.png" class="img-fluid" />
-          <h3>Learn from our trainers</h3>
-          <p>Our team of highly educated trainers provide one on one sessions were they
-            teach abiut the names of every muscles in our bodies and how to train them to get maximum results </p>
+      <div class="row g-4">
+        <div class="col-lg-4 col-sm-6 text-center">
+          <div class="service card-effect bounceInUp">
+            <div class="iconbox">
+              <img src="../assets/images/meal.png">
+            </div>
+            <h5 class="mt-4 mb-2">Meal plan</h5>
+            <p>We offer detailed meal plans to guide you on the type of food you should eat before and after every workout session.
+            </p>
             <a class="read-more no-line" href="#">Learn more <span><i class="bi bi-arrow-right"></i></span></a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center">
+          <div class="service card-effect">
+            <div class="iconbox">
+              <img src="../assets/images/trainers.png">
+            </div>
+            <h5 class="mt-4 mb-2">Exercise schedule</h5>
+            <p>We offer detailed weekely exercise plan which will help as far as having a more organized regular exercise
+            schedule
+            </p>
+            <a class="read-more no-line" href="#">Learn more <span><i class="bi bi-arrow-right"></i></span></a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-sm-6 text-center">
+          <div class="service card-effect">
+            <div class="iconbox">
+              <img src="../assets/images/timetable.png">
+            </div>
+            <h5 class="mt-4 mb-2">Learn from our trainers</h5>
+            <p>Our team of highly qualified trainers offer one-on-one sessions where they explain the names of all the muscles in our
+            body and how to train them to get the best results
+            </p>
+            <a class="read-more no-line" href="#">Learn more <span><i class="bi bi-arrow-right"></i></span></a>
+          </div>
         </div>
       </div>
     </div>
-    </div>
-  </div>
-</section>
-
-<section id="details" class="container-fluid">
-  <div class="container-sm text-center py-5 " width="20%">
-    <div class="row center-block pt-5 ">
-      <div class="col-sm-10 col-sm-offset-1">
-        <div class="row justify-content-md-center">
-          <div class="col-md-7">
-            
-              <img class="img-fluid" src="../assets/images/support.jpg" alt="alternative" width="60%" height="60%" />
-          </div>
-          <div class="col-sm-4 justify-content-md-center">
-            <div class="text-container">
-              <h1>Why Choose Us?</h1>
-              <p>We understannd the frustration that comes with walking into the gym for the first time,seeing all the wonderful equipment
-                  but not knowing were to start. Our support group will keep you 
-                  motivated whenever you are feeling demotivated.
-              </p>
-              <a class="btn-solid-reg" href="#contact">Contact us</a>
-            </div>
-          </div>
-        </div>
-        </div>
-    
-    </div>
-  </div>
-  
-</section>
-<section id="details" class="container-fluid">
-  <div class="container-sm py-5 " width="20%">
-    <div class="row pt-5 ">
-      <div class="col-sm-10 col-sm-offset-1">
-        <div class="row justify-content-md-center">
-          <div class="col-md-7">
-            <div class="text-container">
-            <h1>It is important to do exercises correctly!</h1>
-              <p>Learn from our workout videos how to perfom different exercises
-                to help you target all the different muscles properly. 
-                You do not have to go searching for workout videos we bring them to you.</p>
-              <a class="btn-solid-reg" href="#community">Get notifications</a>
-            </div>
-          </div>
-          <div class="col-sm-4 justify-content-md-center">
-            <img class="img-fluid" src="../assets/images/click.png" alt="alternative" width="60%" height="60%" />
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
   </section>
+
+<section class="row bg-light py-5" id="feature">
+<div class="card mb-4 card-effect service" style="max-width: 540px;" id="wrapper " >
+  <div class="row no-gutters">
+    <div class="col-md-4">
+      <img src="../assets/images/support.jpg" class="card-img" alt="...">
+    </div>
+    <div class="col-md-6">
+      <div class="card-body ">
+        <h5 class="card-title">Why Pick Us?</h5>
+        <p class="card-text">TWe are aware of the frustration that results from entering a gym for the first time, taking in all the amazing
+          equipment, but having no idea where to begin.
+          When you're feeling demotivated, our support group will keep you going.</p>
+          <a class="btn-solid-reg" href="#contact">Contact us</a>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+<section class="row bg-light " id="info">
+  <div class="card mb-4 card-effect service" style="max-width: 540px;" id="flexbox">
+    <div class="row no-gutters">
+      <div class="col-md-6">
+        <div class="card-body ">
+          <h5 class="card-title">Correct exercise technique is crucial!</h5>
+          <p class="card-text">Learn from our workout videos how to carry out various exercises to correctly target all the different muscles.
+          You do not need to look for workout videos because we provide them for you.</p>
+        <a class="btn-solid-reg" href="#community">Get notifications</a>
+        </div>
+      </div>
+      <div class="col-md-5">
+        <img src="../assets/images/click.png" class="card-img" alt="...">
+      </div>
+    </div>
+  </div>
+</section>
 
 
 <section class="container-fluid " id="contact">
@@ -149,7 +181,7 @@
   </div>
 </section>
 
-<div class="container-fluid py-5 " id="community">
+<div class="container-fluid " id="community">
   <div class="row py-5" id="row-container">
     <div class="container text-center">
       <div class="col-md-6 mx-auto">
@@ -162,6 +194,7 @@
     </div>
   </div>
 </div>
+
 
 <footer class="pt-4 bg-dark text-white">
   <div class="container">
