--- a/HomePage/src/app/app.component.html
+++ b/HomePage/src/app/app.component.html
@@ -1,7 +1,7 @@
 
  <section class="logo-container">
     <nav
-      class="navbar navbar-expand-md fixed-top navbar-light bg-white" aria-label="Main navigation">
+      class="navbar navbar-expand-lg navbar-light bg-light fixed-top pt-0">
       <div class="container">
         <a class="navbar-brand" href="#">
           <span><span><img src="../assets/images/icons8.png" /> SmartTrainer</span></span>
@@ -32,11 +32,20 @@
  </section>
 
 
-<section id="header" class="container-fluid" style="background-color: rgb(246, 253, 253);">
+<section id="header" class="container-fluid">
+  
   <div class="container py-5">
+   
     <div class="row py-4">
       <div class="col-lg-6 col-xl-5">
+        <div class="glow"></div>
+        <div class="orb">
+          <div class="shine"></div>
+          <div class="light"></div>
+        </div>
+
         <div class="col-lg-7 pt-5 ">
+          <div class="pulser"></div>
           <h1 class="h1-large pt-5 fw-bold">Learn how to train your body</h1>
           <p class="p-large ">As a beginner at the gym, get all the information you need on how 
             to train different muscles in your body.</p>
@@ -44,18 +53,26 @@
         </div>
       </div>
       <div class="col-lg-6 col-xl-7">
-        <div class="image-container">
-          <img class="img-fluid" src="../assets/images/3d.jpg"  width="70%" height="60%" alt="alternative"  />
+        <div class="image-container py-5">
+         
+          <img class="img-fluid image2" src="../assets/images/images4.png"/>
+          <img class="img-fluid image1" src="../assets/images/train.jpg" alt="alternative" />
+         
         </div>
       </div>
     </div>
+   
   </div>
 </section>
 
 
+  <div class="pulser"></div>
+
+
+
 
   <section id="services">
-    <div class="container">
+    <div class="container py-5">
       <div class="row mb-5">
         <div class="col-md-8 mx-auto text-center">
           
@@ -98,50 +115,40 @@
             <a class="read-more no-line" href="#">Learn more <span><i class="bi bi-arrow-right"></i></span></a>
           </div>
         </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+              <div class="service card-effect">
+                <div class="iconbox">
+                  <img src="../assets/images/support.png">
+                </div>
+                <h5 class="mt-4 mb-2">Why Pick Us?</h5>
+                <p class="card-text">TWe are aware of the frustration that results from entering a gym for the first time, taking in all
+                  the amazing
+                  equipment, but having no idea where to begin.
+                  When you're feeling demotivated, our support group will keep you going.</p>
+                <a class="btn-solid-reg" href="#contact">Contact us</a>
+              </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 text-center">
+              <div class="service card-effect">
+                <div class="iconbox">
+                  <img src="../assets/images/click.png">
+                </div>
+                <h5 class="mt-4 mb-2">Correct exercise technique is crucial!</h5>
+                <p class="card-text">Learn from our workout videos how to carry out various exercises to correctly target all the
+                  different muscles.
+                  You do not need to look for workout videos because we provide them for you.</p>
+                <a class="btn-solid-reg" href="#community">Get notifications</a>
+              </div>
+            </div>
+            
+           
       </div>
+    
     </div>
   </section>
 
-<section class="row bg-light py-5" id="feature">
-<div class="card mb-4 card-effect service" style="max-width: 540px;" id="wrapper " >
-  <div class="row no-gutters">
-    <div class="col-md-4">
-      <img src="../assets/images/support.jpg" class="card-img" alt="...">
-    </div>
-    <div class="col-md-6">
-      <div class="card-body ">
-        <h5 class="card-title">Why Pick Us?</h5>
-        <p class="card-text">TWe are aware of the frustration that results from entering a gym for the first time, taking in all the amazing
-          equipment, but having no idea where to begin.
-          When you're feeling demotivated, our support group will keep you going.</p>
-          <a class="btn-solid-reg" href="#contact">Contact us</a>
-      </div>
-    </div>
-  </div>
-</div>
-</section>
-
-<section class="row bg-light " id="info">
-  <div class="card mb-4 card-effect service" style="max-width: 540px;" id="flexbox">
-    <div class="row no-gutters">
-      <div class="col-md-6">
-        <div class="card-body ">
-          <h5 class="card-title">Correct exercise technique is crucial!</h5>
-          <p class="card-text">Learn from our workout videos how to carry out various exercises to correctly target all the different muscles.
-          You do not need to look for workout videos because we provide them for you.</p>
-        <a class="btn-solid-reg" href="#community">Get notifications</a>
-        </div>
-      </div>
-      <div class="col-md-5">
-        <img src="../assets/images/click.png" class="card-img" alt="...">
-      </div>
-    </div>
-  </div>
-</section>
-
-
 <section class="container-fluid " id="contact">
-  <div class="container py-4">
+  <div class="container py-4" id="shadow">
     <div class="row">
       <div class="col-lg-5 m-auto text-center">
         <h1>Contact Us</h1>
@@ -185,7 +192,7 @@
   <div class="row py-5" id="row-container">
     <div class="container text-center">
       <div class="col-md-6 mx-auto">
-      <h3 class="mt-4">Dont miss our updates,Join our community </h3>
+      <h4 class="mt-4 ">Join our community </h4>
       <div class="input-group mt-5" id="mailing">
         <input type="email" class="form-control" placeholder="Enter your email">
         <button class="btn " type="button">Submit</button>
