--- a/HomePage/src/app/app.component.html
+++ b/HomePage/src/app/app.component.html
@@ -35,9 +35,13 @@
    
     <div class="row py-4">
       <div class="col-lg-6 col-xl-5">
-
+      <div class="loader">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
         <div class="col-lg-7 pt-5 ">
-        
           <h1 class="h1-large pt-5 fw-bold">Learn how to train your body</h1>
           <p class="p-large ">As a beginner at the gym, get all the information you need on how 
             to train different muscles in your body.</p>
@@ -47,8 +51,8 @@
       <div class="col-lg-6 col-xl-7">
         <div class="image-container py-5">
          
-          <img class="img-fluid image2" src="../assets/images/images4.png"/>
-          <img class="img-fluid image1" src="../assets/images/train.jpg" alt="alternative" />
+          <img class="img-fluid image2" src="../assets/images/images4.png" alt="shape"/>
+          <img class="img-fluid image1" src="../assets/images/WEIGHT.png" alt="alternative" />
          
         </div>
       </div>
@@ -132,8 +136,6 @@
                 <a class="btn-solid-reg" href="#community">Get notifications</a>
               </div>
             </div>
-            
-           
       </div>
     
     </div>
