--- a/HomePage/src/app/app.component.css
+++ b/HomePage/src/app/app.component.css
@@ -135,14 +135,14 @@ h6,
     position: relative;
     top: -80px;
     left: 5px;
-    width: 80%;
+    width: 90%;
     height: 100%;
 }
 
 .image1 {
     position: absolute;
-    top: 30px;
-    left: 30px;
+    top: -30px;
+    right: 50px;
     
 }
 .pulser {
@@ -308,4 +308,49 @@ h4 {
 .pulser{
     left: 30%;
     top: -100px;
+}
+.loader {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: linear-gradient(#00FF00, #00FF00, #00FF00);
+    animation: animate 1s linear infinite;
+}
+
+@keyframes animate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.loader span {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: linear-gradient(#00b2ff, #00ffbb, #6bff6b);
+}
+
+.loader span:nth-child(1) {
+    filter: blur(5px);
+}
+
+.loader span:nth-child(2) {
+    filter: blur(10px);
+}
+
+.loader::after {
+    content: "";
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 10px;
+    bottom: 10px;
+    background: #162434;
+    border-radius: 50%;
 }
